--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -16,4 +16,5 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "LAST COMMIT: $(git rev-list -n 1 $GITHUB_REF)"
       - run: echo "GITHUB_REF $GITHUB_REF" && if git branch --contains $(git rev-list -n 1 $GITHUB_REF) | grep -q main; then echo "THIS IS A TAG FROM MASTER"; else echo "THIS IS NOT A TAG FROM MASTER"; fi
