--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -16,6 +16,5 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - run: var=$(git rev-list -n 1 $GITHUB_REF) && echo "LAST COMMIT $var"
-      - run: secondvar=$(git rev-list -n 1 refs/heads/main) && echo "MAIN LAST COMMIT $secondvar"
+      - run: var=$(git rev-list -n 1 $GITHUB_REF) && echo "LAST COMMIT $var" && secondvar=$(git rev-list -n 1 refs/heads/main) && echo "MAIN LAST COMMIT $secondvar"
       - run: echo "var $var" && if "$var" = "$secondvar" ; then echo "THIS IS A TAG FROM MASTER"; else echo "THIS IS NOT A TAG FROM MASTER"; fi
