--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -14,8 +14,5 @@ jobs:
         with:
           fetch-depth: 0  # Ensures we fetch all history
 
-      - name: Get Last Commit of the Current Tag
-        run: echo "Tag Commit $(git rev-parse HEAD)"
-
-      - name: Get Last Commit of the Main Branch
-        run: echo "Main Branch Commit $(git rev-parse origin/main)"
+      - name: Get Last Commit of the Current Tag and the main tag
+        run: echo "Tag Commit $(git rev-parse HEAD)" && echo "Main Branch Commit $(git rev-parse origin/main)"
